[gd_scene load_steps=29 format=2]

[ext_resource path="res://mobs/ostrich/ostrich.png" type="Texture" id=1]
[ext_resource path="res://mobs/cora/cora.gd" type="Script" id=2]
[ext_resource path="res://mobs/cora/cora.png" type="Texture" id=3]
[ext_resource path="res://mobs/components/component_manager.tscn" type="PackedScene" id=4]
[ext_resource path="res://mobs/components/attack_touch.tscn" type="PackedScene" id=5]
[ext_resource path="res://mobs/components/hurt_by_bullet.tscn" type="PackedScene" id=6]
[ext_resource path="res://mobs/cora/shield.png" type="Texture" id=7]
[ext_resource path="res://mobs/fernand/fernand_hit.wav" type="AudioStream" id=8]
[ext_resource path="res://mobs/fernand/fernand_death.wav" type="AudioStream" id=9]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 24.5, 15 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 26, 31 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 26, 0, 26, 31 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 32, 50 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 32, 50 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 10.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 3, 25 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 3.25, 22.75 )

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.0980392, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}

[sub_resource type="Animation" id=25]
resource_name = "use"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 0.0980392, 1, 0 ), Color( 0.972549, 0.0980392, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.5, 3.5 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "flip"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=9]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.447059, 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../../../Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../../../Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "death"
length = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("..:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../../Sprite:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.47451, 0, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../../Sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 5, 5 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "hurt"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("..:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("..:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 4, 3 ), Vector2( 4, 5 ), Vector2( 4, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../../Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=21]
radius = 15.0
height = 30.0

[node name="Cora" type="KinematicBody2D"]
collision_layer = 64
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2( 10, 13 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2( -10, 13 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="RayCastRightTop" type="RayCast2D" parent="."]
position = Vector2( 10, -20 )
enabled = true
cast_to = Vector2( 5, 0 )
collision_mask = 3

[node name="RayCastLeftTop" type="RayCast2D" parent="."]
position = Vector2( -10, -20 )
enabled = true
cast_to = Vector2( -5, 0 )
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.00003, 1.5 )
rotation = 1.5708
shape = SubResource( 20 )

[node name="FakePos" type="Position2D" parent="."]
position = Vector2( 0, 5.96046e-08 )

[node name="Sprite" type="AnimatedSprite" parent="."]
pause_mode = 1
frames = SubResource( 17 )
animation = "New Anim"
frame = 1
playing = true

[node name="Position2D" type="Position2D" parent="Sprite"]
position = Vector2( 22, -15 )

[node name="Shield" type="Sprite" parent="."]
modulate = Color( 0.972549, 0.0980392, 1, 0 )
self_modulate = Color( 1, 1, 1, 0.235294 )
scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="StaticBody2D" type="StaticBody2D" parent="Shield"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/StaticBody2D"]
position = Vector2( -19, -2 )
shape = SubResource( 22 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Shield/StaticBody2D"]
position = Vector2( 20, -2 )
shape = SubResource( 22 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Shield/StaticBody2D"]
position = Vector2( 0.25, -24 )
rotation = 1.5708
shape = SubResource( 23 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Shield"]
anims/RESET = SubResource( 24 )
anims/use = SubResource( 25 )

[node name="FlipAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/flip = SubResource( 3 )

[node name="DeathAnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 9 )
anims/death = SubResource( 10 )

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "Audio"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="EnemyComponentManager" parent="." instance=ExtResource( 4 )]
orb_amount = 2500
knockback = 200
attack_damage = 35
max_health = 150
free_on_death = false

[node name="HitSound" parent="EnemyComponentManager" index="0"]
stream = ExtResource( 8 )

[node name="SpriteHolder" parent="EnemyComponentManager" index="2"]
visible = false

[node name="HurtAnimationPlayer" parent="EnemyComponentManager/SpriteHolder/AnimatedSprite" index="0"]
anims/RESET = SubResource( 6 )
anims/death = SubResource( 7 )
anims/hurt = SubResource( 8 )

[node name="FlipAnimationPlayer" parent="EnemyComponentManager/SpriteHolder/AnimatedSprite" index="1"]
anims/flip = SubResource( 5 )

[node name="CollisionShape2D" parent="EnemyComponentManager/HurtArea" index="0"]
position = Vector2( 0, 0 )
shape = SubResource( 21 )

[node name="Index" parent="EnemyComponentManager" index="4"]
position = Vector2( -25, -30 )

[node name="HealthLabel" parent="EnemyComponentManager/Index" index="0"]
margin_left = 16.0
margin_top = 21.0
margin_right = 56.0
margin_bottom = 35.0

[node name="AttackTouch" parent="EnemyComponentManager" instance=ExtResource( 5 )]
enemy_path = NodePath("../..")
hit_area_path = NodePath("../HurtArea")

[node name="HurtByBullet" parent="EnemyComponentManager" instance=ExtResource( 6 )]
enemy_path = NodePath("../..")
hurt_area_path = NodePath("../HurtArea")

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="EnemyComponentManager"]
